@@ -1,3 +1,5 @@
+          2021-01-08 -- extend MESAAsteroSamples slicing to handle NumPy ints,
+                        lists or arrays of bools or ints
 v0.0.12,  2020-12-11 -- overhauled docs
           2020-12-01 -- rewrite MESA astero sample functions as extensions of
                         dict and list
